--- a/.ci_support/linux_ppc64le_r_base4.5.yaml
+++ b/.ci_support/linux_ppc64le_r_base4.5.yaml
@@ -25,7 +25,7 @@ pin_run_as_build:
 r_base:
 - '4.5'
 target_platform:
-- linux-64
+- linux-ppc64le
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
